# caps_switch

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
src/: main.rs
