[package]
name = "caps_switch"
version = "1.0.0"
edition = "2024"

[build-dependencies]
winres = "0.1"

[dependencies]
windows = { version = "0.51", features = [
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_Graphics_Gdi",
] }
